# verisec-forge

./: .gitignore  PROJECT_CHARTER.md  README.md  pyproject.toml
analysis/: README.md  baseline_failure_analysis.json  baseline_hf_qwen15b_gsm8k_dev100_failure_analysis.json  baseline_hf_qwen_failure_analysis.json  baseline_hf_qwen_gsm8k_dev100_failure_analysis.json  grpo_qwen_failure_analysis.json  secure_code_codexglue_hybrid_classifier_auditor_v1_eval1000_failure_analysis.json  secure_code_codexglue_qwen15bcoder_eval1000_failure_analysis.json  secure_code_codexglue_sft_qwen15bcoder_detector_positive_auditor_v1_eval1000_failure_analysis.json  secure_code_codexglue_sft_qwen15bcoder_evidence_only_6000_v1_eval1000_failure_analysis.json  secure_code_codexglue_sft_qwen15bcoder_evidence_only_6000_v1_holdout2000_failure_analysis.json  secure_code_codexglue_sft_qwen15bcoder_recall_focused_6000_v1_eval1000_failure_analysis.json  secure_code_codexglue_sft_qwen15bcoder_safe_none_only_6000_v1_eval1000_failure_analysis.json  secure_code_codexglue_sft_qwen15bcoder_safe_none_only_v1_eval1000_failure_analysis.json  secure_code_codexglue_sft_qwen15bcoder_standard_6000_v1_eval1000_failure_analysis.json  secure_code_codexglue_sft_qwen15bcoder_vulnerable_oversample_clean_6000_v1_eval1000_failure_analysis.json  secure_code_crossvul_qwen05b_eval20_failure_analysis.json  secure_code_crossvul_qwen05b_failure_analysis.json  secure_code_crossvul_qwen15b_eval20_failure_analysis.json  secure_code_mock_failure_analysis.json  secure_code_primevul_dpo_qwen05b_calibrated_v1_eval244_failure_analysis.json  (+50 more)
(+656 files in other folders)
