[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verifiable-reasoning-forge"
version = "0.1.0"
description = "A reproducible research stack for secure code reasoning, post-training, and auto-benchmarking."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
train = [
  "accelerate>=0.34.0",
  "datasets>=2.21.0",
  "peft>=0.12.0",
  "transformers>=4.44.0",
  "trl>=0.10.1",
  "torch>=2.4.0",
]
serve = [
  "vllm>=0.6.0",
]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
vrf = "vrf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
